accesso_impostazioni_chiaro-scuro

--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" class="titanium-forced-dark">
+<html lang="it">
 
 <head>
     <meta charset="utf-8" />
@@ -139,7 +139,7 @@
                     onclick="window.location.href='notifiche_storia.html'">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box bg-indigo-glass">
+                            <div class="settings-icon-box bg-blue-glass">
                                 <span class="material-symbols-outlined">history</span>
                             </div>
                             <div class="settings-text">
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="timer-selector" id="lock-timer-selector"
-                        style="width: 100%; border-top: 1px solid rgba(255,255,255,0.05); padding-top: 1rem;">
+                        style="width: 100%; border-top: 1px solid var(--border-color); padding-top: 1rem;">
                         <button class="timer-btn" data-val="0" data-t="lock_immediately">Subito</button>
                         <button class="timer-btn" data-val="1" data-t="lock_1min">1 Min</button>
                         <button class="timer-btn" data-val="3" data-t="lock_3min">3 Min</button>
@@ -244,7 +244,7 @@
                         </div>
                     </div>
                     <div class="timer-selector" id="theme-selector"
-                        style="width: 100%; border-top: 1px solid rgba(255,255,255,0.05); padding-top: 1rem;">
+                        style="width: 100%; border-top: 1px solid var(--border-color); padding-top: 1rem;">
                         <button class="timer-btn theme-btn" data-theme="light" data-t="theme_light">Chiaro</button>
                         <button class="timer-btn theme-btn" data-theme="auto" data-t="theme_auto">Auto</button>
                         <button class="timer-btn theme-btn" data-theme="dark" data-t="theme_dark">Scuro</button>
@@ -278,7 +278,7 @@
                 <div class="settings-item" onclick="window.location.href='privacy.html'" style="cursor: pointer;">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box bg-indigo-glass">
+                            <div class="settings-icon-box bg-emerald-glass">
                                 <span class="material-symbols-outlined">shield</span>
                             </div>
                             <div class="settings-text">
