--- a/Frontend/public/regole_scadenze.html
+++ b/Frontend/public/regole_scadenze.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" class="titanium-forced-dark">
+<html lang="it">
 
 <head>
     <meta charset="utf-8" />
@@ -30,7 +30,9 @@
         <!-- HEADER FISSO -->
         <header class="titanium-header">
             <div id="header-content" class="header-stack">
-                <h2 class="header-title" data-t="expiry_rules_title_page">Regole Scadenze</h2>
+                <h2 class="header-title"
+                    style="white-space: normal; line-height: 1.1; text-align: center; max-width: 60%; margin: 0 auto;"
+                    data-t="expiry_rules_title_page">Regole Scadenze</h2>
                 <div style="position: absolute; left: 0; display: flex; gap: 0.5rem;">
                     <a href="impostazioni.html" class="btn-icon-header" style="position: relative; right: auto;">
                         <span class="material-symbols-outlined">arrow_back</span>
