--- a/Frontend/public/configurazione_automezzi.html
+++ b/Frontend/public/configurazione_automezzi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" class="titanium-forced-dark">
+<html lang="it">
 
 <head>
     <meta charset="utf-8" />
@@ -17,7 +17,7 @@
     <!-- Design System Master (Solo Account) -->
     <link rel="stylesheet" href="assets/css/auth_impostazioni.css">
 
-    <!-- CSS specifico per tabelle (Preservato da Titanium.css) -->
+    <!-- CSS specifico per tabelle -->
     <style>
         .table-container {
             width: 100%;
@@ -32,11 +32,6 @@
         .divide-y>*+* {
             border-top-width: 1px;
             border-color: rgba(255, 255, 255, 0.05);
-        }
-
-        .size-8 {
-            width: 32px;
-            height: 32px;
         }
 
         .filled {
@@ -57,7 +52,9 @@
         <!-- HEADER FISSO -->
         <header class="titanium-header">
             <div id="header-content" class="header-stack">
-                <h2 class="header-title" data-t="header_config_vehicles">CONFIGURAZIONE AUTOMEZZI</h2>
+                <h2 class="header-title"
+                    style="white-space: normal; line-height: 1.1; text-align: center; max-width: 60%; margin: 0 auto;"
+                    data-t="header_config_vehicles">CONFIGURAZIONE AUTOMEZZI</h2>
                 <div style="position: absolute; left: 0; display: flex; gap: 0.5rem;">
                     <a href="regole_scadenze.html" class="btn-icon-header" style="position: relative;">
                         <span class="material-symbols-outlined">arrow_back</span>
@@ -72,7 +69,6 @@
         </header>
 
         <main class="settings-container no-select">
-
             <div class="settings-group">
                 <h4 class="settings-group-title">Logica Notifiche</h4>
 
@@ -168,30 +164,18 @@
             <!-- Sintassi Automatica -->
             <div class="settings-group">
                 <h4 class="settings-group-title" data-t="section_syntax_title">Sintassi Automatica</h4>
-                <div class="titanium-vault" style="padding: 1.5rem; background: rgba(0,0,0,0.2); border-radius: 20px;">
-                    <div style="display: flex; flex-direction: column; gap: 1rem; font-size: 0.8rem;">
-                        <div>
-                            <p style="color: var(--text-muted); font-size: 0.65rem; font-weight: 800; text-transform: uppercase; margin-bottom: 0.5rem;"
-                                data-t="syntax_subject_generated">Oggetto Email Generato</p>
-                            <div
-                                style="background: rgba(255,255,255,0.05); padding: 0.75rem; border-radius: 10px; font-family: monospace;">
-                                <span style="color: #60a5fa;">[Oggetto]</span> + [Veicolo e Targa]
-                            </div>
-                        </div>
-                        <div>
-                            <p style="color: var(--text-muted); font-size: 0.65rem; font-weight: 800; text-transform: uppercase; margin-bottom: 0.5rem;"
-                                data-t="syntax_body_generated">Corpo Email Generato</p>
-                            <div
-                                style="background: rgba(255,255,255,0.05); padding: 0.75rem; border-radius: 10px; font-family: monospace;">
-                                <span style="color: #60a5fa;">[Oggetto]</span> + [Targa] + <span
-                                    style="opacity: 0.5;">"scade il"</span> + <span
-                                    style="color: #fbbf24;">[Data]</span>
-                            </div>
+                <div class="syntax-container">
+                    <div class="syntax-row">
+                        <label class="syntax-label" data-t="syntax_subject_generated">Oggetto Email Generato</label>
+                        <div class="syntax-code">
+                            <span class="syntax-token emerald">[Oggetto]</span>
+                            <span class="syntax-token blue">[Modello]</span>
+                            <span class="syntax-token muted">"Targa"</span>
+                            <span class="syntax-token amber">[Targa]</span>
                         </div>
                     </div>
                 </div>
             </div>
-
         </main>
 
         <!-- FOOTER PREMIUM -->
@@ -199,13 +183,12 @@
             <div style="opacity: 0.3; text-align: center;">
                 <span
                     style="font-size: 8px; font-weight: 800; letter-spacing: 0.3em; color: white; text-transform: uppercase;">
-                    Titanium Security Protocol V1.0
+                    Titanium Security Protocol V3.0
                 </span>
             </div>
         </footer>
     </div>
 
-    <!-- Scripts -->
     <!-- Scripts -->
     <script src="assets/js/configurazione_automezzi.js?v=2.2" type="module"></script>
 </body>
