--- a/Frontend/public/configurazione_generali.html
+++ b/Frontend/public/configurazione_generali.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" class="titanium-forced-dark">
+<html lang="it">
 
 <head>
     <meta charset="utf-8" />
@@ -52,7 +52,9 @@
         <!-- HEADER FISSO -->
         <header class="titanium-header">
             <div id="header-content" class="header-stack">
-                <h2 class="header-title" data-t="general_config_title">CONFIGURAZIONE GENERALI</h2>
+                <h2 class="header-title"
+                    style="white-space: normal; line-height: 1.1; text-align: center; max-width: 60%; margin: 0 auto;"
+                    data-t="general_config_title">CONFIGURAZIONE GENERALI</h2>
                 <div style="position: absolute; left: 0; display: flex; gap: 0.5rem;">
                     <a href="regole_scadenze.html" class="btn-icon-header" style="position: relative;">
                         <span class="material-symbols-outlined">arrow_back</span>
@@ -67,7 +69,6 @@
         </header>
 
         <main class="settings-container no-select">
-
             <div class="settings-group">
                 <h4 class="settings-group-title">Logica Notifiche</h4>
 
@@ -93,8 +94,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="container_types" class="accordion-content"
-                    style="display: none; padding: 0; overflow: hidden; background: rgba(0,0,0,0.2);">
+                <div id="container_types" class="accordion-content">
                     <table class="w-full text-xs">
                         <tbody id="tbody_types"></tbody>
                     </table>
@@ -124,8 +124,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="container_templates" class="accordion-content"
-                    style="display: none; padding: 0; overflow: hidden; background: rgba(0,0,0,0.2);">
+                <div id="container_templates" class="accordion-content">
                     <table class="w-full text-xs">
                         <tbody id="tbody_templates" class="divide-y"></tbody>
                     </table>
@@ -135,36 +134,25 @@
             <!-- Sintassi Automatica -->
             <div class="settings-group">
                 <h4 class="settings-group-title" data-t="section_syntax_title">Sintassi Automatica</h4>
-                <div class="titanium-vault" style="padding: 1.5rem; background: rgba(0,0,0,0.2); border-radius: 20px;">
-                    <div style="display: flex; flex-direction: column; gap: 1rem; font-size: 0.8rem;">
-                        <div>
-                            <p style="color: var(--text-muted); font-size: 0.65rem; font-weight: 800; text-transform: uppercase; margin-bottom: 0.5rem;"
-                                data-t="syntax_subject_generated">Oggetto Email Generato</p>
-                            <div
-                                style="background: rgba(255,255,255,0.05); padding: 0.75rem; border-radius: 10px; font-family: monospace;">
-                                <span style="color: #2dd4bf;">[Oggetto]</span>
-                            </div>
+                <div class="syntax-container">
+                    <div class="syntax-row">
+                        <label class="syntax-label" data-t="syntax_subject_generated">Oggetto Email Generato</label>
+                        <div class="syntax-code">
+                            <span class="syntax-token emerald">[Oggetto]</span>
                         </div>
-                        <div>
-                            <p style="color: var(--text-muted); font-size: 0.65rem; font-weight: 800; text-transform: uppercase; margin-bottom: 0.5rem;"
-                                data-t="syntax_body_generated">Corpo Email Generato</p>
-                            <div
-                                style="background: rgba(255,255,255,0.05); padding: 0.75rem; border-radius: 10px; font-family: monospace;">
-                                <span style="opacity: 0.5;">"Ciao"</span> + [Nome] + <span
-                                    style="color: #2dd4bf;">[Oggetto]</span> + <span style="opacity: 0.5;">"in
-                                    data"</span> + <span style="color: #2dd4bf;">[Data]</span>
-                            </div>
-                        </div>
-                        <div
-                            style="display: flex; gap: 0.5rem; opacity: 0.5; align-items: flex-start; margin-top: 0.5rem;">
-                            <span class="material-symbols-outlined" style="font-size: 1rem;">tips_and_updates</span>
-                            <p style="font-size: 0.7rem; font-style: italic;" data-t="syntax_note_dynamic">Le istruzioni
-                                sono caricate dinamicamente in base alla tipologia scelta.</p>
+                    </div>
+                    <div class="syntax-row">
+                        <label class="syntax-label" data-t="syntax_body_generated">Corpo Email Generato</label>
+                        <div class="syntax-code">
+                            <span class="syntax-token muted">"Ciao"</span>
+                            <span class="syntax-token">[Nome]</span>
+                            <span class="syntax-token emerald">[Oggetto]</span>
+                            <span class="syntax-token muted">"in data"</span>
+                            <span class="syntax-token emerald">[Data]</span>
                         </div>
                     </div>
                 </div>
             </div>
-
         </main>
 
         <!-- FOOTER PREMIUM -->
@@ -172,14 +160,14 @@
             <div style="opacity: 0.3; text-align: center;">
                 <span
                     style="font-size: 8px; font-weight: 800; letter-spacing: 0.3em; color: white; text-transform: uppercase;">
-                    Titanium Security Protocol V1.0
+                    Titanium Security Protocol V3.0
                 </span>
             </div>
         </footer>
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/configurazione_generali.js?v=2.1" type="module"></script>
+    <script src="assets/js/configurazione_generali.js?v=2.2" type="module"></script>
 </body>
 
 </html>
